[package]
name = "probe"
version = "0.2.2"
authors = ["Christoph Koehler <christoph@zerodeviation.net>"]
edition = "2021"
license-file = "LICENSE-MIT"
repository = "https://github.com/ckoehler/probe"
publish = false

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
argh="0.1"
regex = "1"
itertools = "0.14"
rand = "0.9"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.43", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-error = "0.2.1"
color-eyre = "0.6.3"
zmq = "0.10"
async_zmq = "0.4.0"
tokio-stream = "0.1.17"
console-subscriber = { version = "0.4.1", optional = true }

[features]
console = ["dep:console-subscriber"]

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.12.0"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to consider the binaries in a package for distribution (defaults true)
dist = true
# Whether to install an updater program
install-updater = false
