[package]
name = "probe"
version = "0.2.2"
authors = ["Christoph Koehler <christoph@zerodeviation.net>"]
edition = "2021"
license-file = "LICENSE-MIT"
repository = "https://github.com/ckoehler/probe"
publish = false

[dependencies]
ratatui = "0.27"
crossterm = "0.28"
argh="0.1"
regex = "1"
itertools = "0.13"
rand = "0.8"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
tokio = "1.39"
zmq = "0.10"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.12.0"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to consider the binaries in a package for distribution (defaults true)
dist = true
# Whether to install an updater program
install-updater = false
