[package]
name = "probe-zmq"
version = "0.3.4"
authors = ["Christoph Koehler <christoph@zerodeviation.net>"]
description = "Probe is a TUI ZMQ PUB/SUB monitor and debugger."
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ckoehler/probe"
publish = true

[package.metadata.wix]
upgrade-guid = "C32EB457-F4E6-4626-B89F-8A6C93532A4B"
path-guid = "D2B8B461-ED42-424C-8257-20A2BCF0FBB8"
license = false
eula = false

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
argh="0.1"
regex = "1"
itertools = "0.14"
rand = "0.9"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.43", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-error = "0.2.1"
color-eyre = "0.6.3"
zeromq = "0.4.1"
tokio-stream = "0.1.17"
console-subscriber = { version = "0.4.1", optional = true }

[[bin]]
name = "probe"
path = "src/main.rs"

[features]
console = ["dep:console-subscriber"]

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[profile.release]
lto = true
codegen-units = 1


[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
cast_precision_loss = "allow"
unwrap_used = "deny"

[lints]
workspace = true
